# accident-analytics-pipeline-python

./: README.md  pyproject.toml
config/: logging.yaml
src/accident_analytics_pipeline_python/: main.py
src/accident_analytics_pipeline_python/cleaning/: data_clean.py
src/accident_analytics_pipeline_python/config/: config.yaml  paths.yaml
src/accident_analytics_pipeline_python/ingestion/: data_ingestion.py
src/accident_analytics_pipeline_python/standardization/: data_standardization.py
src/accident_analytics_pipeline_python/utils/helpers/: helper.py
src/accident_analytics_pipeline_python/utils/load_config/: load_config.py
src/accident_analytics_pipeline_python/utils/loggers/: logger.py
src/accident_analytics_pipeline_python/validation/: data_validation.py
tests/: test_data_clean.py  test_data_ingest.py  test_data_standardization.py  test_data_validation.py  test_helper.py  test_load_config.py  test_logger.py  test_main.py
utils/load_config/: load_config.py
utils/logger/: logger.py
