[project]
name = "accident-analytics-pipeline-python"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "josecscosta1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "accident_analytics_pipeline_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
