[project]
name = "accident-analytics-pipeline-python"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "josecscosta1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]

[tool.poetry.scripts]
acidentes = "accident_analytics_pipeline_python.main:main"

[tool.poetry]
packages = [{include = "accident_analytics_pipeline_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true